# factory_game

./: Cargo.toml
assets/defs/: example.toml  sink.toml  source.toml
assets/defs/factories/: sink.toml
src/: asset_loader.rs  camera.rs  dev.rs  factory.rs  main.rs  preview.rs  road.rs  states.rs  terrain.rs  tile.rs  tui.rs
src/asset_loader/: loader.rs  plugin.rs  types.rs
src/camera/: plugin.rs  setup.rs  systems.rs
src/factory/: attributes.rs  defs.rs  factory_preview.rs  factory_types.rs  plugin.rs  production_types.rs  systems.rs  types.rs
src/globals/: constants.rs  functions.rs
src/preview/: factory_preview.rs  plugin.rs  road_preview.rs  systems.rs  types.rs
src/road/: plugin.rs  systems.rs  types.rs
src/terrain/: plugin.rs  systems.rs  types.rs
src/tile/: attributes.rs  plugin.rs
src/tui/: plugin.rs  systems.rs  types.rs
